--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -346,19 +346,18 @@ This chapter introduces the computational framework of the CRR. It presents two 
 This chapter is organized into two sections. The first section looks at the internal architectural design representation structure and how it is implemented in Prolog. The second section looks at the spatial constraint solvers and how each is implemented in CLP.
 
 \section{Design Representation}
-The CRR internally represents two distinct aspects of an architectural design. It represents the design's physical form and non-physical artefactual extensions. The physical form pertains to the precise geometric data that defines the design's structural elements (walls, doors, windows, etc.) with regard to layout, location and shape. Artefactual extension pertains to the non-physical but geometric data that defines the functional characteristics of structural elements, such as the space required for a person to operate a doorway or window.
+The CRR internally represents two distinct aspects of an architectural design. It represents the design's physical form and non-physical artefactual extensions. The physical form pertains to the precise geometric data that defines the design's structural elements (walls, doors, windows, etc.) with regard to layout, location and shape. Artefactual extension pertains to the non-physical but geometric data that defines the functional characteristics of structural elements, such as the space used by a person to operate a doorway.
 
-The physical representation of the design is automatically imported into the CRR from a multi-modal spatial data access framework \cite{MultiModal} built by the DesignSpace project \cite{DesignSpace}. For each architectural entity, the CRR imports the structural geometric coordinate data and a unique identifier, referred to in the CRR as the \emph{crr\_id}. Currently artefactual extension are manually imported in the CRR but the intent for future versions is to automate this directly from the multi-modal spatial data access framework.  
+The physical representation of the design is automatically imported into the CRR from a multi-modal spatial data access framework \cite{MultiModal} built by the DesignSpace project \cite{DesignSpace}. For each architectural entity, the CRR imports the structural geometric coordinate data and a unique identifier, referred to in the CRR as the \emph{crr\_id}. Currently, artefactual extensions are manually imported in the CRR, but the intent for future versions is to automate this directly from the multi-modal spatial data access framework.  
 
 The remainder of this section is broken up into three subsections. The first subsection looks at the physical representation structure. The second subsection looks at the artefactual representation structure. The final subsection looks at how each are implemented in the CRR.
 
 \subsection{Physical Design Representation}
-The physical representation models the design's structural form in terms of its precise physical geometric features (i.e., layout, shape, location). Architectural entities, such as walls, windows, doorways, columns, and rooms, are represented as geometric primitives of polygons, lines and points that correspond to the physical dimensions (length, width, shape) of the entities as they occur in the real world. The physical model of the design is analogous to the design perspective that is represented by CAAD programs. 
-
+The physical representation of a design models its' structural form in terms of precise physical geometric features (i.e., layout, shape, location). Architectural entities, such as walls, windows, doorways, columns, and rooms, are represented in the CRR as geometric primitives of polygons, lines and points that correspond to the physical dimensions (length, width, shape) of the entities as they occur in the real world. The physical representation of the design is analogous to the design perspective that is represented by CAAD programs. 
 
 
 \subsection{Artefactual Design Representation}
-Functional artifact are non-physical, spatial extensions of architectural entities that pertain to a specific functional quality of an entity. Artefactual extensions do not have a physical manifestation; however, they are an important part of the design representation because they affect the functionality and performance of the design from an experiential perspective. 
+An artefactual extension is a non-physical, spatial extension of an architectural entity that pertain to a specific functional quality. While artefactual extension does not have a physical manifestation, it is an important aspect of the design representation model because it affects the functionality and performance of a design from an experiential perspective. 
 
 There are three types of spatial artefacts identified by Bhatt\cite{Bhatt} that are represented in the CRR: \emph{operational space}, \emph{functional space}, and \emph{range space}.
 
@@ -386,21 +385,21 @@ The range space pertains to a region of space that encompass the range of a sens
 \label{door-sink}
 \end{figure}
 
-Artefactual extensions directly affect how well a design functions. For example, a sink in a bathroom has a functional space, the space a person occupies while washing his/her hands at the sink. If this space interferes with (i.e., topologically overlapping) the functional and/or physical space of a doorway, this will cause a circulation problem when both the doorway and sink are simultaneously being operated, i.e., a collision between the person washing his/her hands and the doorway itself or the person operating the doorway. In this example, the functional aspects of the bathrooms design with regard to the mitigation of circulation problems is directly influenced by the spatial configuration of the non-physical artefactual extensions of the design. It should be noted that this type of occurrence can not be modeled in a traditional CAAD program because they do not represent artefactual extension of architectural entities.
+Artefactual extensions directly affect the experiential quality of a design. For example, a sink in a bathroom has a functional space, the space a person occupies while washing his/her hands at the sink. If this space interferes with (i.e., topologically overlapping) the functional and/or physical space of a doorway, this will cause a circulation problem when both the doorway and sink are simultaneously being operated, i.e., a collision between the person washing his/her hands and the doorway itself or the person operating the doorway. In this example, the functional aspects of the bathrooms design with regard to the mitigation of circulation problems is directly influenced by the spatial configuration of the non-physical artefactual extensions of the design. It should be noted that this type of occurrence can not be modeled in current CAAD program because they do not have a way to represent artefactual extension.
 
 
 \subsection{Implementation}
-Within the CLP framework of the CRR, the design representation is implemented as several factbases and rulebases. There are two factbases that can be described as in memory database-like structures. The first factbase is used like a catalog that relates each architectural entity to it's architectural type (wall, window, door, room, interior design object, etc.) via its \emph{crr\_id}. Each entry in the factbase is a Prolog predicate of the form $architectural \mathunderscore type(crr \mathunderscore id, type)$.
+Within the CLP framework of the CRR, the physical and artefactual design representation model is implemented as several factbases and rulebases. There are two factbases that can be described as in memory database-like structures. The first factbase is used as a catalog, which relates each architectural entity to it's architectural type (wall, window, door, room, interior design object, etc.) via its \emph{crr\_id}. Each entry in the factbase is a Prolog predicate of the form $architectural \mathunderscore type(crr \mathunderscore id, type)$.
 \begin{verbatim}
    architectural_type(door42, door).
    architectural_type(wall49, wall).
-\end{verbatim} The second factbase is used like a linking table that relates two architectural entities based on structural containment relationships, i.e. door42 is contained in wall5, wall5 in contained in room6, etc. Each containment relationship is a Prolog predicate of the form $contained(contained \mathunderscore crr \mathunderscore id, containing \mathunderscore crr \mathunderscore id)$.
+\end{verbatim} The second factbase is used as a linking table that relates two architectural entities based on structural containment relationships, i.e. door42 is contained by wall5, wall5 in contained by room6. Each containment relationship is implemented as a Prolog predicate of the form $contained(contained \mathunderscore crr \mathunderscore id, containing \mathunderscore crr \mathunderscore id)$.
 \begin{verbatim}
    contained(door42, wall5).
    contained(wall5, room3).
 \end{verbatim} 
 
-There are multiple rulebases used to link architectural entities to geometric representations. Each representation, physical, functional, operational, and range, has a separate rulebase, but they are all implemented using a similar form. In each rulebase, the head of the rule links an architectural entity via is \emph{crr\_id} to a variable binding that links to its' internal geometric representation. The body of each rule is responsible for transforming coordinate point data into internal spatial primitives of points, lines, and polygons. The following rules show the physical, functional and operational rules for a door with a \emph{crr\_id} of door42. Note the similarities and differences between the rules.
+Rulebases link architectural entities to geometric representations, and each representation, physical, functional, operational, and range, has a separate rulebase. However, they are all implemented using a similar form. Each rulebase is comprised as a series of Prolog rules each with a head and a body. The head links an entity to a variable that represents its' geometric structure. The body of each rule is responsible for transforming coordinate point data (from import) into internally defined spatial primitives of points, lines, and polygons. The following rules show the physical, functional and operational rules for a door with a \emph{crr\_id} of door42. Note the similarities and differences between rules.
 \begin{verbatim}
     physical_representation(door42, Geometry) :-
             spatial_primitive(Geometry, [(1,3),(1,4),(4,4),(4,3)]).
@@ -412,7 +411,7 @@ There are multiple rulebases used to link architectural entities to geometric re
             spatial_primitive(OpGeometry, [(1,4),(4,6),(4,3)]).
 \end{verbatim} 
 
-The transformation of coordinate data to spatial primitives and the binding of the variable is accomplished by the $spatial \mathunderscore primitive$ rule, which is in the body of each rule. Each $spatial \mathunderscore primitive$ rule works by matching arguments when it is called. For example, the following call to the $spatial \mathunderscore primitive$ rule with a single point in the second argument instantiates the the variable, \emph{SpatialPrimitive}, as a point object primitive.
+The $spatial \mathunderscore primitive$ rule transforms coordinate data into spatial primitives and binds a variable (its' second argument) to the spatial primitive representation. The $spatial \mathunderscore primitive$ rule works by matching arguments. For example, the following call to the $spatial \mathunderscore primitive$ rule with a single point in the second argument instantiates the the variable, \emph{SpatialPrimitive}, as a point object primitive.
 \begin{verbatim}
    spatial_primitive(SpatialPrimitive, (5,7)).
 \end{verbatim} Similarly, a call to $spatial \mathunderscore primitive$ with a list of points instantiates the variable as a polygon object primitive.
@@ -420,7 +419,7 @@ The transformation of coordinate data to spatial primitives and the binding of t
    spatial_primitive(SpatialPrimitive, [(5,7), (5,9), (7,7)]).
 \end{verbatim} 
 
-Every architectural entity has a physical representation but may or may not have a functional, operational, or range representation. For example, a doorway usually has a functional and operational representation but does not a range representation. Some entities, such as columns, have no artefactual representation. However, there is no limitation to which entities can or can not have certain artefactual extensions.
+Every architectural entity has a physical representation but may or may not have a functional, operational, or range representation. For example, a doorway usually has a functional and operational representation but may not have a range representation. Some entities, such as columns, have no artefactual representations. However, there is no limitation to which entities can or can not have certain artefactual extensions.
 
 \begin{figure}[H]
 \centering
@@ -429,12 +428,12 @@ Every architectural entity has a physical representation but may or may not have
 \label{clp-design}
 \end{figure}
 
-The factbases and rulebases can be queried using a Prolog interpretor. A call to the $architectural \mathunderscore type$ factbase can be used to get an entity's type given its' \emph{crr\_id}, such as the following query.
+Factbases and rulebases can be queried using a Prolog interpretor. A call to the $architectural \mathunderscore type$ factbase can be used to get an entity's type given its' \emph{crr\_id}, such as the following query.
 \begin{verbatim}
     architectural_type(door42, Type).
-\end{verbatim} Similarly, a query to a rulebase will return and instantiated variable with the respective spatial representations. Figure \ref{clp-design} shows the implementation design for the rulebases. For example, the following query to the \emph{physical\_representation} rule with \emph{crr\_id} of door42 will instantiate the $Geometry$ variable with door42's physical representation. \begin{verbatim}
+\end{verbatim} The return of this call instantiates the Type variable with the door's type, which is \emph{door}. Similarly, a query to a rulebase will return and instantiated variable with the respective spatial representations. Figure \ref{clp-design} shows the implementation structure for the rulebases. For example, a query to the \emph{physical\_representation} rulebase will instantiate the $Geometry$ variable with a physical representation. \begin{verbatim}
     physical_representation(door42, Geometry).
-\end{verbatim} Calls to the functional, operational, and range representation rules work in the exact same fashion.
+\end{verbatim} Calls to the functional, operational, and range representation rulebases work in the exact same fashion.
 
 
 %Given an entity and its \emph{crr\_id}, a query to the DSpace rulebase will return an instantiated variable with the entity's quantitative geometry.  
@@ -463,57 +462,57 @@ Qualitative spatial representation and reasoning is used in the CRR to bridge th
 \end{figure}
 % house image from http://www.tinyhomes.com/TH2163_SimpleElegance.html
 
-The spatial constraint solvers uses formal qualitative spatial calculi for topological (Region Connected Calculus \cite{Freksa}), orientational (Single Cross \cite{Freksa}, Oriented Point Relation Algebra \cite{Moratz}) and distance to qualitatively represent and reason over the design. Within the CLP framework of the CRR, the spatial constraint solvers are implemented in CLP($\mathbb{R}$) (Constraint Logic Programming over Reals) and CHR (Constrain Handling Rules). 
+The spatial constraint solvers uses formal qualitative spatial calculi for topological (Region Connected Calculus \cite{Freksa}), orientational (Single Cross \cite{Freksa}, Oriented Point Relation Algebra \cite{Moratz}) and distance to qualitatively represent and reason over the design. Within the CLP framework of the CRR, the spatial constraint solvers are implemented in CLP($\mathbb{R}$) (Constraint Logic Programming over Reals) and CHR (Constrain Handling Rules). The topological and distance constraint solvers extend Sindalog \cite{Sindalog}, a spatial constraint solver written in CHR.
 
-Each spatial constraint solver is used as a query engine that qualifies spatial relationships to answer spatial queries.  A spatial query involves three step:
+Within the CRR, each spatial constraint solver can be used as a query engine that qualifies spatial relationships to answer spatial queries.  A spatial query involves three step:
 \begin{enumerate}
 \item retrieval of quantitative representation 
 \item spatial abstraction of quantitative representation
-\item qualification of abstract spatial objects via constraint solving
+\item qualification via constraint solving
 \end{enumerate}  
 As an example, the following query involves the inside topological relationship between a desk and a room. 
 \begin{verbatim}
    inside(desk3, room1).
-\end{verbatim} In the first step, the quantitative geometries of the desk and room are retrieved from the physical representation rulebase. The second step uses transformation rules (as discussed in the next section) to spatially abstract these geometries into abstract spatial representations. Finally, the spatially abstracted objects are used by the topological constraint solver to qualify the inside relationship. The constraint solver will respond \emph{true} if the desk has an inside spatial relationship with the room, and \emph{fail} if it does not.   
+\end{verbatim} In the first step, the quantitative geometries of the desk and room are retrieved from the physical representation rulebase. The second step uses transformation rules (as will be discussed in the next section) to spatially abstract these geometries into abstract spatial objects. Finally, the spatially abstracted objects are used by the topological constraint solver to qualify the inside relationship. The constraint solver will respond \emph{true} if the desk has an inside spatial relationship with the room, and \emph{fail} if it does not.   
 
 %The spatial constraint solvers work directly over the design representation structure via the spatial abstraction representation layer and the design factbase. The main service of the reasoner is qualification of the quantitative architectural space into the qualitative feature space of topology, orientation, and distance. It should be noted that the distance constraint solver is different from the topological and orientational constraint solvers because it does not qualify distance relationships, rather it solves minimum distance constraints over quantitative objects. The topological and distance constraint solvers extend The Sindalog spatial constraint solver \cite{Sindalong}, a spatial constraint solver written in CHR. These qualitative spatial relationships are, in turn, used to reason about conceptual design requirements.
 
-The remainder of this section is structured as follow. The first subsection looks at how the quantitative representation of a design is spatially abstracted. The second, third and forth subsections look at topological, orientational and distance based reasoning respectively.
+The remainder of this section is structured as follow. The first subsection looks at how the quantitative representation of entities in a design are spatially abstracted. The second, third and forth subsections look at topological, orientational and distance based reasoning respectively.
 
 \subsection{Spatial Abstraction}
-Spatial abstraction is the process of generalizing a precise spatial representation so as to represent only those features that are necessary for qualitative spatial reasoning. Within the context of the CRR, quantitative representations of a architectural entities are abstracted as points, directed points, lines and convex hulls in order to reason over the qualitative spatial features of topological, orientation and distance. For example, one approach to reasoning about the qualitative orientational relationship between two doors requires both doors to be spatially represented as directed points. Because doors are naturally represented as polygons, spatial abstraction is needed to transform their quantitative polygonal representation into a qualitative directed point representation.
+Spatial abstraction is the process of generalizing a precise spatial representation so as to represent only those features that are necessary for qualitative spatial reasoning. Within the context of the CRR, quantitative representations (physical and aretefactual) are abstracted as points, directed points, lines and convex hulls in order to reason over the design's qualitative spatial features of topological, orientation and distance. For example, one approach to reasoning about the qualitative orientational relationship between two doors requires both doors to be spatially represented as directed points. Because doors are naturally represented as polygons, spatial abstraction is needed to transform their quantitative polygonal representation into a qualitative directed point representation.
 
 %In DSpace architectural entities can be spatially abstracted. This allows DSpace to reason about a design from a qualitative level of abstraction with regards to its spatial characteristics of topology, orientation and distance. This type of qualitative spatial reasoning reasons over the abstract feature space of the design using abstract spatial objects of points, directed points, and convex hulls. 
 
 %Architectural entities are not directly modeled as abstract spatial objects. These objects are generated by transformation rules that abstract the quantitative geometries of the architectural entities. 
 
 The process of spatially abstracting an architectural entity depends on the following:
-\begin{enumerate}
-\item type of spatial abstraction, eg. line to point, polygon to convex hull
+\begin{enumerate} \label{abs dependencies}
+\item the type of spatial abstraction, eg. line to point, polygon to convex hull
 \item an interpretation of the intrinsic nature of an entity within an architectural and design context
 \end{enumerate}
 For example, the abstracted representation of a doorway as a directed point is not only defined by its physical form (a polygon) but also by the interpretation of the doorway's intrinsic direction in the context of its' situation in the design. Further discussion on this topic can be found in \ref{spatial abstraction}.
 
-Within the CLP framework of the CRR, spatial abstraction is implemented as Prolog rules. These rules transform the physical and artefactual representations into abstract spatial objects of points, directed points and convex hulls.
-
- Spatially abstracting an architectural entity depends on the entity type, the spatial abstraction type (point, directed point, or convex hull) and sometimes a contextual identifier (direction of a doorway into or out of a specific room). Given these dependencies, spatially abstraction rules geometrically transform the quantitative geometries into abstract spatial objects. 
-
-Unlike the quantitative and functional representations, the abstract representation is not stored in the rulebase. Rather, spatial abstraction rules function over the quantitative and functional rulebase. For example, the spatial abstraction rule for a doorway into a point abstraction requires the point abstraction rule to query the quantitative rulebase to retrieve the doorways quantitative geometry. The following spatial abstraction rule is for a doorway point abstraction. Note that the rule is based on the interpretation of a doorway point abstraction as the centroid of its quantitative geometry (see Appendix A.1).   
+Within the CLP framework of the CRR, architectural entities are spatial abstracted using Prolog rules. These rules transform an entity's physical or artefactual representation into abstract spatial objects of points, directed points and convex hulls. Transformation rules take an \emph{crr\_id}, retrieve the quantitative geometry and preform a series of geometric transformations based on the dependences discussed earlier in this section. As an example, the rule for spatially abstracting a door represented as polygon into a point first retrieves the physical polygonal representation and transforms the polygon into a point by calculating the polygons centroid. 
 \begin{verbatim}
-    point_abstraction(door55, PtAbs) :-
-            quantitative_geometry(door55, Quant),
-            centroid(Quant, PtAbs).
-\end{verbatim}
-Given an entity and its crr\_id, a query to the DSpace spatial abstraction rule will return an instantiated variable with the entity's spatially abstracted geometry. If the following query to the point abstraction rule is made for a doorway with \emph{crr\_id} of \emph{door55}, then the point abstraction geometry of \emph{door55} will be instantiated in the PtAbs variable.
+    point_abstraction(crr_id, PtAbs) :-
+           physical_representation(crr_id, Polygon),
+           centroid(Polygon, PtAbs).
+\end{verbatim} Given an crr\_id, a query to abstraction rule will return an instantiated variable with the entity's spatially abstracted geometry. For example, if the following query to the point abstraction rule is made for a doorway with \emph{crr\_id} of \emph{door42}, then the point abstraction geometry of \emph{door42} will be instantiated in the PtAbs variable.
 \begin{verbatim}
     point_abstraction(door55, PtAbs).
 \end{verbatim}
+
+%Spatially abstracting an architectural entity depends on the entity type, the spatial abstraction type (point, directed point, or convex hull) and sometimes a contextual identifier (direction of a doorway into or out of a specific room). Given these dependencies, spatially abstraction rules geometrically transform the quantitative geometries into abstract spatial objects. 
+
+%Unlike the quantitative and functional representations, the abstract representation is not stored in the rulebase. Rather, spatial abstraction rules function over the quantitative and functional rulebase. For example, the spatial abstraction rule for a doorway into a point abstraction requires the point abstraction rule to query the quantitative rulebase to retrieve the doorways quantitative geometry. The following spatial abstraction rule is for a doorway point abstraction. Note that the rule is based on the interpretation of a doorway point abstraction as the centroid of its quantitative geometry (see Appendix A.1).   
+
 
 
 \subsection{Topology}
 The CRR can qualify the following four topological relationships for convex hulls: inside (\ref{inside}), outside (\ref{outside}), partially overlapping (\ref{overlapping}), and disconnected (\ref{disconnected}). In DSpace topological qualification uses geometric properties of convex hulls to detect topological relationships. 
 
-\begin{figure}[t]
+\begin{figure}[b]
  \centering
  \subfloat[inside]{\label{inside}\includegraphics[width=27mm]{ntpp}}
  \hspace{4 mm}
@@ -603,7 +602,6 @@ Figure \ref{scc} shows an SCC relationship between three points. The partitionin
 \end{aligned}
 \end{equation}
 
-
 SCC relationships are qualified by solving a system of linear inequalities, which are based on the lines that partition space into the SCC half-planes. Labeling starts at the line that runs between the origin and relatum, starting at zero and incrementing clockwise. Given three points A, B, and C, $M_{AB}$ refers to the slope of line from A to B, $Y_{AB}$ refers to the y-intercept of the line from A to B, $M_{perp}$ refers to the slope of the line that is perpendicular to the line from A to B, and $Y_{perp}$ refers to the y-intercept of the line that is perpendicular to the line from A to B. Given a point \emph{C}, it has an SCC$_{1}$ relationship with points \emph{A} and \emph{B} if the equations in \ref{scc-eq} can be solved. If the equations are not solvable then \emph{C} does not have an SCC$_{1}$ relationship with \emph{A} related to \emph{B}. There are similar systems of inequalities for each of the seven SCC relationships.  
 
 
@@ -627,7 +625,6 @@ Given three entities with \emph{crr\_id}’s \emph{door45}, \emph{room53}, and \
     ?- SCC1(door45, room53, desk2).
     true.
 \end{verbatim}
-
 
 
 \subsection{Distance}
